--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Muhammad Haikal | Portfolio</title>
+  <title>Muhammad Haikal | Creative Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/script.js" defer></script>
 </head>
 <body>
   <header>
@@ -20,30 +21,35 @@
     </nav>
   </header>
 
-  <section id="about">
+  <section id="about" class="fade-in">
     <h2>About Me</h2>
-    <p>Results-driven quality management professional experienced in ISO standards, Halal compliance, and continuous improvement in manufacturing industries.</p>
+    <p>Passionate about quality systems, process improvement, and compliance. Skilled in ISO, Halal Assurance, and operational excellence.</p>
   </section>
 
-  <section id="experience">
+  <section id="experience" class="fade-in">
     <h2>Professional Experience</h2>
-    <ul>
-      <li>Quality Management Specialist | PT. Oki Pulp and Paper Mills (2024 – Present)</li>
-      <li>Quality Control Technician | PT. Oki Pulp and Paper Mills (2021 – 2024)</li>
-      <li>Inventory & Logistics Coordinator | PT. Semen Padang (2017 – 2019)</li>
-    </ul>
+    <div class="card">
+      <h3>Quality Management Specialist</h3>
+      <p>PT. Oki Pulp and Paper Mills (2024 – Present)</p>
+    </div>
+    <div class="card">
+      <h3>Quality Control Technician</h3>
+      <p>PT. Oki Pulp and Paper Mills (2021 – 2024)</p>
+    </div>
+    <div class="card">
+      <h3>Inventory & Logistics Coordinator</h3>
+      <p>PT. Semen Padang (2017 – 2019)</p>
+    </div>
   </section>
 
-  <section id="projects">
+  <section id="projects" class="fade-in">
     <h2>Key Projects</h2>
-    <ul>
-      <li>ISO Compliance & Certification</li>
-      <li>Energy Efficiency Improvement</li>
-      <li>Defect Reduction & QA Enhancement</li>
-    </ul>
+    <div class="project-card">ISO Certification & Compliance</div>
+    <div class="project-card">Energy Efficiency Improvement</div>
+    <div class="project-card">Defect Reduction & QA Optimization</div>
   </section>
 
-  <section id="contact">
+  <section id="contact" class="fade-in">
     <h2>Contact</h2>
     <p>Email: muhammadhaekal04@gmail.com</p>
     <p>LinkedIn: <a href="https://linkedin.com/in/muhammad-haikal-906017" target="_blank">Visit My LinkedIn</a></p>
